# taskmanager-rust

./: Cargo.toml  projects.json
src/: cli.rs  config.rs  main.rs  project.rs
