[package]
name = "taskmanager-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
taskmanager = { git = "https://github.com/sphoid/libtaskmanager-rust.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }